# cpp-colors

./: .gitignore  CMakeLists.txt  README.md
examples/: color-conversion.cpp
include/cpp-colors/: color.h  color_exception.h  color_io.h  color_named.h  colors.h  configure.h  constants.h  pixel_format.h  pixel_utils.h
include/cpp-colors/detail/: colors_impl.h  constants_impl.h  named_impl.h
include/cpp-colors/detail/dotnet/: dotnet_colors.h  dotnet_constants.h  dotnet_named.h
include/cpp-colors/detail/wpf/: wpf_colors.h  wpf_constants.h  wpf_named.h
include/cpp-colors/impl/: colors_impl.h  constants_impl.h  named_impl.h
include/cpp-colors/impl/dotnet/: dotnet_colors.h  dotnet_constants.h  dotnet_named.h
include/cpp-colors/impl/wpf/: wpf_colors.h  wpf_constants.h  wpf_named.h
include/cpp-colors/impl/x11/: x11_colors.h  x11_constants.h  x11_named.h
test/: CMakeLists.txt  tester.cpp
test/suites/: test_color.cpp  test_media_color.cpp
